# GrainUtils

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  regenerate
.github/workflows/: pluginbuild.yml
HelpSource/Overviews/: GrainUtils.schelp
cmake_modules/: SuperColliderCompilerConfig.cmake  SuperColliderServerPlugin.cmake
plugins/Delays/: Delays.cpp  Delays.hpp
plugins/Delays/Classes/: Delays.sc
plugins/Delays/HelpSource/: GrainDelay.schelp
plugins/Demand/: Demand.cpp  Demand.hpp
plugins/Demand/Classes/: Demand.sc
plugins/Demand/HelpSource/: Durn.schelp
plugins/Disperser/: Disperser.cpp  Disperser.hpp
plugins/Disperser/Classes/: Disperser.sc
plugins/Disperser/HelpSource/: Disperser.schelp
plugins/Distortion/: Distortion.cpp  Distortion.hpp
plugins/Distortion/Classes/: Distortion.sc
plugins/Distortion/HelpSource/: BuchlaFold.schelp  BuchlaFoldADAA.schelp
plugins/EventSystem/: EventSystem.cpp  EventSystem.hpp
plugins/EventSystem/Classes/: EventSystem.sc
plugins/EventSystem/HelpSource/: RampAccumulator.schelp  RampDivider.schelp  SchedulerCycle.schelp  VoiceAllocator.schelp
plugins/EventSystem/HelpSource/Classes/: RampDivider.schelp  RampIntegrator.schelp  SchedulerBurst.schelp  SchedulerCycle.schelp  VoiceAllocator.schelp
plugins/Filters/: Filters.cpp  Filters.hpp
plugins/Filters/Classes/: Filters.sc
plugins/Filters/HelpSource/: MorphSVF.schelp
plugins/GrainDelay/: GrainDelay.cpp  GrainDelay.hpp
plugins/GrainDelay/Classes/: GrainDelay.sc
plugins/GrainDelay/HelpSource/: GrainDelay.schelp
plugins/GrainUtils/: CMakeLists.txt  EventSystem.cpp  EventSystem.hpp  GrainDelay.cpp  GrainDelay.hpp  GrainUtils.cpp  GrainUtils.sc  ShiftRegister.cpp  ShiftRegister.hpp  UnitShapers.cpp  UnitShapers.hpp  Utils.hpp
plugins/GrainUtils/Classes/: GrainUtils.sc
plugins/GrainUtils/Guides/: Scheduling.shelp
plugins/GrainUtils/HelpSource/: GrainDelay.schelp  GrainUtils.schelp  Granulation.schelpXxX  GuideAllocation.schelp  GuideScheduling.schelp  SchedulerBurst.schelp  SchedulerCycle.schelp  Scheduling.schelp  VoiceAllocator.schelp
plugins/Main/: Main.cpp
plugins/Main/HelpSource/Guides/: Allocation.schelp  Scheduling.schelp
plugins/Main/HelpSource/Overviews/: GrainUtils.schelp
plugins/Oscs/: Oscs.cpp  Oscs.hpp
plugins/Oscs/Classes/: Oscs.sc
plugins/Oscs/HelpSource/: DualOscOS.schelp  DualPulsarOS.schelp  PulsarOS.schelp  SingleOscOS.schelp
plugins/ShiftRegister/: ShiftRegister.cpp  ShiftRegister.hpp
plugins/ShiftRegister/Classes/: ShiftRegister.sc
plugins/ShiftRegister/HelpSource/: ShiftRegister.schelp
plugins/UnitEasing/: UnitEasing.cpp  UnitEasing.hpp
plugins/UnitEasing/Classes/: UnitEasing.sc
plugins/UnitEasing/HelpSource/: SCurve.schelp
plugins/UnitShapers/: UnitShapers.cpp  UnitShapers.hpp
plugins/UnitShapers/Classes/: UnitShapers.sc
plugins/UnitShapers/HelpSource/: GaussianWindow.schelp  JCurve.schelp  TrapezoidalWindow.schelp  TukeyWindow.schelp  UnitCubic.schelp  UnitKink.schelp  UnitRand.schelp  UnitStep.schelp  UnitTriangle.schelp  UnitWalk.schelp
plugins/UnitSteps/: UnitSteps.cpp  UnitSteps.hpp
plugins/UnitSteps/Classes/: UnitSteps.sc
plugins/UnitSteps/HelpSource/: UnitRegister.schelp  UnitStep.schelp  UnitUSR.schelp  UnitUrn.schelp  UnitWalk.schelp
plugins/UnitWindows/: UnitWindows.cpp  UnitWindows.hpp
plugins/UnitWindows/Classes/: UnitWindows.sc
plugins/UnitWindows/HelpSource/: ExponentialWindow.schelp  HanningWindow.schelp
plugins/Utils/: DemandUtils.hpp  DistortionUtils.hpp  EventUtils.hpp  FilterUtils.hpp  OscUtils.hpp  OversamplingUtils.hpp  PluginUtils.hpp  ShaperUtils.hpp  StepUtils.hpp  Utils.hpp  wavetables.h
